2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/pixmaps/Makefile.am:
	* src/pixmaps/network-light-22x22.png:
	* src/pixmaps/network-light-256x256.png:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Keep the network light icon in two sizes, one small and one big so
	control points have a bit more choice.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use LARGE_TOOLBAR as icon size instead of DIALOG when rendering icons
	from stock.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Put a little more space between children of action-invocation-table.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Put static labels of action dialog into a sizegroup.

2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use the best interpolation method available.

2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>
	Lapo Calamandrei  <calamandrei@gmail.com>

	* src/pixmaps/network-light.png:

	Icon update for network-light.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-icons.c:

	Use g_build_filename() instead of g_strjoin() for filenames.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>
	Lapo Calamandrei  <calamandrei@gmail.com>

	* src/pixmaps/upnp-device.png:
	* src/pixmaps/upnp-state-variable.png:

	Icons update for device and state-variable.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-action-arg-in.png:
	* src/pixmaps/upnp-action-arg-out.png:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	New separate icons for in & out action arguments from Lapo
	Calamandrei.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-state-variables.png:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:
